# kasan-notes

./: .gitignore  .gitmodules  CMakeLists.txt  exceptions.h  log.cpp  log.h  main.cpp  test.cpp
app/desktop/: desktopfilelocator.cpp  desktopfilelocator.h  kasannotesapplication.cpp  kasannotesapplication.h  mainwindowcontroller.cpp  mainwindowcontroller.h
app/desktop/qml/: mainwindowcontroller.cpp  mainwindowcontroller.h
core/: filelocator.h
core/backends/common/: attachment.cpp  attachment.h  backend.cpp  backend.h  note.cpp  note.h  notebook.cpp  notebook.h
core/backends/evernote/: evernoteattachment.cpp  evernoteattachment.h  evernotebackend.cpp  evernotebackend.h  evernotenote.cpp  evernotenote.h  evernotenotebook.cpp  evernotenotebook.h
core/backends/kasandb/: bmxpcommands.h  bmxppacket.cpp  bmxppacket.h  bmxpsocket.c  bmxpsocket.h  kasandbauthenticator.cpp  kasandbauthenticator.h  kasandbbackend.cpp  kasandbbackend.h
core/notestorage/: notestorage.cpp  notestorage.h  notestoragemodel.cpp  notestoragemodel.h
data/certs/: server.public
test/stubs/: stubnote.cpp  stubnote.h
ui/desktop/: Button.qml  KasanTextEditor.qml  LineInput.qml  MediumText.qml  NotesTree.qml  login.qml  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/desktop-qml/: KasanTextEditor.qml  KasanToolBar.qml  login.qml
